--- a/public/mapa.html
+++ b/public/mapa.html
@@ -119,6 +119,7 @@
         <button onclick="setIni()"> Seleccionar inicio </button>
         <button onclick="setFin()"> Seleccionar fin </button>
         <button onclick="calculaCamino()"> Calcular camino </button>
+        <button onclick="limpia()"> Limpia camino </button>
     </div>    
     
   </body>
